infra/k8s/auth-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: auth
          image: georgesirghe/auth
---
# the service for the auth pod
apiVersion: v1
kind: Service
metadata:
  name: auth-srv  
spec:
  # din't set a type here because the default is ClusterIP and this is what we need
  selector:
    app: auth
  ports:
    - name: auth
      protocol: TCP
      port: 3000
      targetPort: 3000
