infra/k8s/auth-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-mongo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-mongo
  template:
    metadata:
      labels:
        app: auth-mongo
    spec:
      containers:
        - name: auth-mongo
          # this image will be taken automatically from the docker hub (the name mongo is from docker hub, must exist in docker hub)
          image: mongo
---
apiVersion: v1
kind: Service
metadata:
  name: auth-mongo-srv
spec:
  selector:
    # same as the label from the template -> metadata -> labels -> app
    app: auth-mongo
  ports:
    # the name put here is only for logging purposes
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
