infra/k8s/orders-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orders
  template:
    metadata:
      labels:
        app: orders
    spec:
      containers:
        - name: orders
          # default name that google cloud assigns to the image / project id in the google cloud platform / name of the project
          #  image: us.gcr.io/ticketing-dev-297516/auth
          # the below image name is for local use or from docker hub
          image: georgesirghe/orders
---
# the service for the auth pod
apiVersion: v1
kind: Service
metadata:
  name: orders-srv
spec:
  # din't set a type here because the default is ClusterIP and this is what we need
  selector:
    app: orders
  ports:
    - name: orders
      protocol: TCP
      port: 3000
      targetPort: 3000
