infra/k8s/tickets-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tickets-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tickets
  template:
    metadata:
      labels:
        app: tickets
    spec:
      containers:
        - name: tickets
          # default name that google cloud assigns to the image / project id in the google cloud platform / name of the project
          #  image: us.gcr.io/ticketing-dev-297516/auth
          # the below image name is for local use or from docker hub
          image: georgesirghe/tickets
---
# the service for the auth pod
apiVersion: v1
kind: Service
metadata:
  name: tickets-srv
spec:
  # din't set a type here because the default is ClusterIP and this is what we need
  selector:
    app: tickets
  ports:
    - name: tickets
      protocol: TCP
      port: 3000
      targetPort: 3000
